<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">iAround</string>
    <string name="download_ticker_txt">a Message</string>
    <string name="download_new_version_ticker_txt">Upadteing Now</string>
    <string name="download_new_version_tip">Downloading Now</string>
    <string name="download_apk_file">Downloading...</string>
    <string name="veryfy_webview_title">Puzzle</string>
    <string name="near_tab_text">Nearby</string>
    <string name="dynamic_tab_text">Moments</string>
    <string name="live_tab_text">Live</string>
    <string name="messages_tab_text">Messages</string>
    <string name="find_tab_text">Me</string>
    <string name="near_fragment">Nearby</string>
    <string name="chat_bar_text">Group</string>
    <string name="rank_tab_text">Ranking</string>
    <string name="home_page_text">iAround</string>
    <string name="minute">mins</string>
    <string name="hour">hours</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="before_second">secs ago</string>
    <string name="before_minute">mins ago</string>
    <string name="before_hour">hours ago</string>
    <string name="before_date">days ago</string>
    <string name="before_month">months ago</string>
    <string name="before_year">years ago</string>
    <string name="just_recently_visit">Just Vistied Now</string>
    <string name="minute_ago_visiting">mins ago Visited</string>
    <string name="chat_timerecord_today_timeformat">H:mm</string>
    <string name="visiting">Visited</string>
    <string name="just_recently">Right Now</string>
    <string name="minute_ago">mins ago</string>
    <string name="chat_timerecord_yearstoday_timeformat">\'Yesterday\' H:mm</string>
    <string name="timeformat_MdHm">M-d H:mm</string>
    <string name="timeformat_YMdHm">yyyy-M-d H:mm</string>
    <string name="time_yesterday">Yesterday</string>
    <string name="time_month">Month</string>
    <string name="time_year">Year</string>
    <string name="time_day">day</string>
    <string name="title_filter">Filter</string>
    <string name="title_create">create</string>
    <string name="cancel">Cancel</string>
    <string name="prompt">Tips</string>
    <string name="ok">Ok</string>
    <string name="confirm">Confirm</string>
    <string name="network_req_failed">Network Error. Check Your Network Connection.</string>
    <string name="please_enter_email_add">Please enter account</string>
    <string name="email_add_invalid">Please Enter Correct Email Format</string>
    <string name="file_path_error">File does not exist</string>
    <string name="splash_register">Sign Up</string>
    <string name="splash_login">Log In</string>
    <string name="login_with_id">Log In</string>
    <string name="register_phone_are">CN+86</string>
    <string name="register_phone_numbere">Please enter your mobile number</string>
    <string name="register_phone_password">Please enter password</string>
    <string name="register_password_hint">The password is too simple</string>
    <string name="register_password_next">Next</string>
    <string name="register_read">I have read and agree to</string>
    <string name="register_user_protocol">《iAround user agreement》</string>
    <string name="iaround_user_agreement_title">iAround user agreement</string>
    <string name="register_please_enter_password">Please enter password</string>
    <string name="register_please_enter_number">Please enter your mobile numbe</string>
    <string name="register_number_invalid">Please enter a correct mobile number</string>
    <string name="register_please_user_protocol">Please check the user agreement</string>
    <string name="search">Search</string>
    <string name="select_country_or_area">Pleas Select Country or District</string>
    <string name="register_title">Setting Account and Password</string>
    <string name="register_next_nickname">Nickname</string>
    <string name="register_next_sex">Gender</string>
    <string name="register_next_sex_man">Male</string>
    <string name="register_next_sex_woman">Female</string>
    <string name="register_next_birthday">Select your birth date</string>
    <string name="register_next_sex_hint">After the success of the registration, gender cannot be modified</string>
    <string name="register_next_please_nickname">Enter Nickname</string>
    <string name="register_next_please_birthday">Enter Your Birthdate</string>
    <string name="register_ver_send">Verification code has been sent to</string>
    <string name="register_ver_code_hint">Please enter the code </string>
    <string name="register_ver_again_send">Retransmit (%ss)</string>
    <string name="register_ver_send_code">Sending code</string>
    <string name="register_ver_re_send_code">Retransmit</string>
    <string name="register_ver_to_iaround">Enter iAround</string>
    <string name="register_ver_please_code">Please enter the code</string>
    <string name="login_title">Log In</string>
    <string name="login_nickname">Nickname</string>
    <string name="login_password">Password</string>
    <string name="login_nickname_hint">iAround ID/Email/Mobile Number</string>
    <string name="login_password_hint">Please enter Password</string>
    <string name="rest_login_password">et the password. Not less than six</string>
    <string name="login_btn">Log In</string>
    <string name="login_phone_are"><u> Select country or region</u></string>
    <string name="login_forget_password"><u>Retrieve Password</u></string>
    <string name="login_third_login">others</string>
    <string name="login_facebook">Facebook</string>
    <string name="login_twiter">Twiter</string>
    <string name="login_qq">QQ</string>
    <string name="login_wechat">WeChat</string>
    <string name="login_sina">Weibo</string>
    <string name="address_x">Unknown Location</string>
    <string name="qq_client_unavailable">No QQ client Installed!</string>
    <string name="qq_client_not_match">Please install version 4.1 and above QQ client</string>
    <string name="weixin_client_no_install_tips">Please download WeChat app</string>
    <string name="dialog_title">Skill Upgrade</string>
    <string name="please_wait">Loading…</string>
    <string name="download_offical">You are currently using the user experience packet. Please download the official package.</string>
    <string name="game_center_task_download">Free Download</string>
    <string name="server_exception">Sorry, Connection Error, Please Login Again</string>
    <string name="facebook_app_id">153061201452113</string>
    <string name="upload_fail">Upload Failed Please Try Again</string>
    <string name="phone_retrieve_password">Send Password Via Mobile Number</string>
    <string name="email_retrieve_password">Send Password Via EMail Address</string>
    <string name="function_no_work">Sorry, service not available now.</string>
    <string name="tel_area_china">CN（+86）</string>
    <string name="register_enter_tel_hint">Mobile number</string>
    <string name="enter_tel_statement">You can get back your password or use related number to login after you binding your E-mail address or mobile number. We will take care of your password and never publish in any place.</string>
    <string name="bind_telphone">Mobile Number Verification</string>
    <string name="space_bind_mobile_desc2">Change Mobile Number</string>
    <string name="change_tel_once_per_month">Change Mobile Number Each Time Per Month</string>
    <string name="reset_password">Reset Password</string>
    <string name="please_input_register_or_bind_phone_number">Please Enter Mobile Number</string>
    <string name="telphone_cannot_be_null">Please Enter Mobile Number</string>
    <string name="telphone_not_correct">Mobile Number InCorrect</string>
    <string name="comfirm_telphone">Mobile Number Confirm</string>
    <string name="dialog_change">Edit</string>
    <string name="start_reconnect">Connection Failed. Please Try Again</string>
    <string name="msg_code_have_send">Verification Code Via SMS Sent to </string>
    <string name="please_enter_your_regitered_email_add">Please Enter Email Address</string>
    <string name="find_password_directions">Reset Your Password, Please Enter Your Email Address.</string>
    <string name="psw_forgot">Forgot Password</string>
    <string name="email_address">Please Enter Email Address</string>
    <string name="login">Log In</string>
    <string name="password_reset_email_sent">Please Check Your Email for Reset New Password.</string>
    <string name="register_input_code">Please enter the code</string>
    <string name="register_resend_code">重发验证码</string>
    <string name="register_set_psw">设置密码</string>
    <string name="text_bind">Verification</string>
    <string name="register_step2">验证码&amp;密码(2/4)</string>
    <string name="next">Next</string>
    <string name="enter_new_login_password">设置新的登录密码，不少于6位</string>
    <string name="msg_code_cannot_be_null">验证码不能为空</string>
    <string name="password_should_not_be_greater_than_16">密码不得大于16位</string>
    <string name="pwd_cannot_be_null">Please Enter Password</string>
    <string name="pwd_is_less_than_6">Password Unless Than 6 Letters</string>
    <string name="password_invalid">请输入格式正确的密码（6–16位半角字符字母、数字和符号）</string>
    <string name="input_correct_code">请输入正确的验证码</string>
    <string name="ver_title">Please enter the code</string>
    <string name="operation_canceled">操作错误或已取消</string>
    <string name="main_quick_register">快速注册</string>
    <string name="unlogin_quick_login">快去登陆遇见,与附近的人互动吧</string>
    <string name="select_sex_no_chanage">Gender will not be modified after selection</string>
    <string name="select_sex_no">Please select gender</string>
    <string name="ver_code_success">验证码发送成功</string>
    <string name="error_login_not_register">未注册</string>
    <string name="register_forgo">Determined to give up registration?</string>
    <string name="chat_record_play">Loudspeaker playback</string>
    <string name="matches_suc_matches_suc">配对成功</string>
    <string name="matches_suc_nickname_tips">您和 </string>
    <string name="matches_suc_enjoy_eachother">彼此欣赏</string>
    <string name="matches_suc_btn_start_chat">开始聊天</string>
    <string name="matches_suc_btn_continue_matches">继续探索</string>
    <string name="dynamic_publish_add_data_source">Data sources：</string>
    <string name="dynamic_publish_add_source">Dianping</string>
    <string name="dynamic_details_pop_cancel">Cancel</string>
    <string name="setting_change_pwd_origin">Change Originel Password </string>
    <string name="setting_change_pwd_new">New Password</string>
    <string name="setting_change_pwd_confirm">Confirm New Password</string>
    <string name="setting_change_pwd_btn">Confirm</string>
    <string name="setting_invisiable_myself">隐身设置</string>
    <string name="setting_invisiable_myself_action">Don\'t Share My Moments</string>
    <string name="setting_invisiable_other_action">Hide User\'s Moments</string>
    <string name="setting_black">Black List</string>
    <string name="category_community">Neighborhood</string>
    <string name="category_business">Business Building</string>
    <string name="category_school">School</string>
    <string name="category_all">All</string>
    <string name="space_modify_head_view">Change avatar</string>
    <string name="space_modify_review_big_phtoo">View clear photos</string>
    <string name="del_photo">Delete photo</string>
    <string name="get_earn">Drawing </string>
    <string name="alipay_account">withdrawal account</string>
    <string name="get_money_to_alipay_tip">Please enter Alipay account </string>
    <string name="get_money_unit">amount (yuan) </string>
    <string name="cash_tip">Please fill in the amount of cash </string>
    <string name="today_can_take_money">Earnings</string>
    <string name="take_all_money">Full withdrawal </string>
</resources>