<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/userFragment_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:background="@color/common_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/margin_left"
        android:paddingRight="@dimen/margin_right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alipay_account"
            android:textColor="@color/common_black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_alipay_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:background="@color/transparent"
            android:hint="@string/get_money_to_alipay_tip"
            android:textColor="@color/common_black"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="@dimen/margin_left"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/common_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/margin_left"
        android:paddingRight="@dimen/margin_right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_money_unit"
            android:textColor="@color/common_black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:background="@color/transparent"
            android:hint="@string/cash_tip"
            android:inputType="number"
            android:textColor="@color/common_black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_today_can_take"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:text="@string/today_can_take_money"
            android:textColor="@color/c_999999"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_take_all_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/take_all_money"
            android:textColor="@color/common_iaround_red"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_bg"
        android:gravity="center"
        android:text="@string/get_earn"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>