<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/userFragment_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_invisible_setting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y120"
        android:layout_marginTop="@dimen/y36"
        android:background="@color/common_white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/x48"
        android:text="@string/setting_invisiable_myself"
        android:textColor="#222222"
        android:textSize="@dimen/y42"
        android:visibility="gone"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:layout_marginLeft="@dimen/x45"
        android:background="#E6E6E6"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_invisiable_myself"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y120"
        android:layout_marginTop="@dimen/y36"
        android:background="@color/common_white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/x48"
        android:text="@string/setting_invisiable_myself_action"
        android:textColor="#222222"
        android:textSize="@dimen/y42" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:layout_marginLeft="@dimen/x45"
        android:background="#E6E6E6" />

    <TextView
        android:id="@+id/tv_invisiable_other"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y120"
        android:background="@color/common_white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/x48"
        android:text="@string/setting_invisiable_other_action"
        android:textColor="#222222"
        android:textSize="@dimen/y42" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:layout_marginLeft="@dimen/x45"
        android:background="#E6E6E6" />

    <TextView
        android:id="@+id/tv_black"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y120"
        android:background="@color/common_white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/x48"
        android:text="@string/setting_black"
        android:textColor="#222222"
        android:textSize="@dimen/y42" />

</LinearLayout>
