<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/common_white"
        android:layout_marginTop="@dimen/y36">

        <EditText
            android:id="@+id/et_origin_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y120"
            android:background="@null"
            android:layout_marginLeft="@dimen/x48"
            android:gravity="center_vertical"
            android:hint="@string/setting_change_pwd_origin"
            android:textSize="@dimen/y42"
            android:inputType="textEmailAddress"
            android:password="true"
            android:textColor="@color/edit_user_value"
            android:textColorHint="#9B9B9B" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5px"
            android:background="@color/bg_color"
            android:layout_marginLeft="@dimen/x45"/>

        <EditText
            android:id="@+id/et_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y120"
            android:background="@null"
            android:layout_marginLeft="@dimen/x48"
            android:gravity="center_vertical"
            android:hint="@string/setting_change_pwd_new"
            android:inputType="textEmailAddress"
            android:password="true"
            android:textSize="@dimen/y42"
            android:textColor="@color/edit_user_value"
            android:textColorHint="#9B9B9B" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5px"
            android:background="@color/bg_color"
            android:layout_marginLeft="@dimen/x45"/>

        <EditText
            android:id="@+id/et_confirm_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y120"
            android:background="@null"
            android:layout_marginLeft="@dimen/x48"
            android:gravity="center_vertical"
            android:hint="@string/setting_change_pwd_confirm"
            android:inputType="textEmailAddress"
            android:password="true"
            android:textSize="@dimen/y42"
            android:textColor="@color/edit_user_value"
            android:textColorHint="#9B9B9B" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_register_password_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y32"
        android:layout_marginLeft="@dimen/x90"
        android:layout_marginRight="@dimen/x90"
        android:visibility="invisible"
        android:textColor="@color/login_btn"
        android:textSize="@dimen/y36"
        android:text="@string/register_password_hint"/>
    <Button
        android:id="@+id/btn_confirm_change"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y124"
        android:layout_marginLeft="@dimen/x50"
        android:layout_marginRight="@dimen/x50"
        android:layout_marginTop="@dimen/y66"
        android:background="@drawable/btn_takepic_selector"
        android:textColor="@color/common_white"
        android:textSize="@dimen/y42"
        android:text="@string/setting_change_pwd_btn"/>

</LinearLayout>
